# universalis

./: Cargo.toml  LICENSE  README.md  justfile
src/: client.rs  error.rs  lib.rs
src/api/: mod.rs
src/api/v2/: content.rs  data_centers.rs  entities.rs  least_recently_updated.rs  market_board_current_data.rs  market_board_sale_history.rs  marketable.rs  mod.rs  most_recently_updated.rs  recently_updated.rs  tax_rates.rs  trade_volume.rs  upload_history.rs  uploader_upload_counts.rs  user_lists.rs  world_upload_counts.rs  worlds.rs
