[package]
name = "universalis"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.80"
derive_builder = "0.20.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
